# ctest

./: .gitignore  Application.c  CMakeLists.txt  Calculator.c  CheckPolydrom.c  EvenOdd.c  Leapyear.c  Palindrome.c  PrimeNumber.c  Primeno.c  Print.c  Product.c  ProductofDigits.c  README.md  ReversNo.c  ReversPrint.c  Reverse.c  SumofTable.c  SumofgivenDigit.c  Tabel.c  Table.c  WordofDigit.c  alphabets.c  armstrong.c  ascii.c  compair.c  concatination.c  copy.c  fibonacci.c  findGreater.c  giveOneByOneNumber.c  matrixsum.c  maxandmin.c  pointer.c  power&base.c  printTable.c  productoffirstandlastdigite.c  strlen.c  structure.c  sumof3digits.c  (+3 more)
cpptest/: calculator.cpp  class.cpp
