cmake_minimum_required(VERSION 3.5)
project(ctest)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES Application.c Calculator.c)
add_executable(ctest Application.c)
add_executable(calculator Calculator.c)
add_executable(greater findGreater.c)
add_executable(even EvenOdd.c)
add_executable(table printTable.c)
add_executable(sumof SumofTable.c)
add_executable(table_babu Table.c)
add_executable(numbers armstrong.c)
add_executable(reverse Reverse.c)